# risk-of-bias

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  paper.bib  paper.md  pyproject.toml  requirements.txt  sitemap.xml  vercel.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-mac.yml  docs-deploy.yml  draft-pdf.yml  lint-commit.yml  lint-pr.yml  lint.yml  publish.yml  release.yml  test.yml
api/: index.html
cli/: index.html
contributing/: index.html
docs/: api.md  cli.md  contributing.md  frameworks.md  index.md  mac_app.md  reporting_and_reproducibility.md  visualisation.md  web.md
frameworks/: index.html
mac_app/: index.html
reporting_and_reproducibility/: index.html
risk_of_bias/: __init__.py  cli.py  compare.py  config.py  export.py  human.py  prompts.py  run_framework.py  summary.py  visualisation.py  web.py
risk_of_bias/frameworks/: __init__.py
risk_of_bias/frameworks/rob2/: __init__.py  _rob2.py
risk_of_bias/frameworks/rob2/domains/: _domain_0_preliminary.py  _domain_1_randomization.py  _domain_2_deviations.py  _domain_3_missing.py  _domain_4_measurement.py  _domain_5_selection.py  _domain_6_overall.py
risk_of_bias/oai/: __init__.py  _utils.py
risk_of_bias/types/: __init__.py  _domain_types.py  _framework_types.py  _question_types.py  _response_types.py
scripts/: build_mac_app.sh
search/: search_index.json
tests/: __init__.py  test_cli.py  test_compare.py  test_export.py  test_framework_io.py  test_human.py  test_run_framework.py  test_save_load.py  test_summary.py  test_version.py  test_visualisation.py  test_web.py
visualisation/: index.html
web/: index.html
